--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,6 +16,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     
+    - name: Show folders
+      run: find . -type d
+    
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
