--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,11 +17,11 @@ jobs:
       run: mvn -B package --file pom.xml
     
     - name: Show folders
-      run: find . -type d
+      run: find .
     
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
         name: SkinsRestorer
-        path: target/*.jar
+        path: ./target/SkinsRestorer.jar
 
