Better console error info

--- a/src/main/resources/command-messages.properties
+++ b/src/main/resources/command-messages.properties
@@ -15,7 +15,7 @@ acf-core.error_prefix = Error: {message}
 acf-core.error_performing_command = I'm sorry, but there was an error performing this command.
 acf-core.info_message = {message}
 acf-core.please_specify_one_of = &e[&2SkinsRestorer&e] &4Error&8: &cPlease specify one of (<c2>{valid}</c2>).
-acf-core.not_allowed_on_console = [SkinsRestorer] Error: Console may not execute this command.
+acf-core.not_allowed_on_console = [SkinsRestorer] Error: Console is not a player! make sure to define a player.
 acf-core.could_not_find_player = &e[&2SkinsRestorer&e] &4Error&8: &cCould not find a player by the name&4: <c2>{search}</c2>
 acf-core.no_command_matched_search = &e[&2SkinsRestorer&e] &4Error&8: &cnot such command&4: <c2>{search}</c2>.
 acf-core.help_page_information = - Showing page <c2>{page}</c2> of <c2>{totalpages}</c2> (<c3>{results}</c3> results).
