- changed each menu locale to SKINSMENU_ - fixed prefix for each SKINSMENU_ & SR_Line - Added ERROR_MOJANG_outage when texture is returned null for what ever reason (needs testing for when your server is offline etc) - skins is now in skinswithoutperms <3 long live skin menu - added Failed to get image dimensions to ERROR_INVALID_URLSKIN - added DisablePrefix: false for the old boys that dont what this :(
some rework on the flow of mojangapi still needs to be done.
We should know where the flow of code goes, and reuse more stuff.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -88,6 +88,9 @@ NoSkinIfLoginCanceled: true
 # True will again make use of the 'HELP_PLAYER' & `SR_LINE` in messages.yml
 UseOldSkinHelp: false
 
+#disable local prefix
+DisablePrefix: false
+
 # Removes "Sending skin update request for .." on join for bungeecord
 Verbose: false
 
