--- a/src/main/resources/command-messages.properties
+++ b/src/main/resources/command-messages.properties
@@ -7,6 +7,8 @@
 #
 # For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
 # For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
+#
+# [Warning!] all non Windows-1252 should be in unicode! (China, Perzisch, russian)  use https://skinsrestorer.net/unicode for command-messages.properties & messages.yml
 acf-core.permission_denied = &3[&2&lSkinsRestorer&r&3] &cI'm sorry, but you do not have permission to perform this command.
 acf-core.error_generic_logged = &e[&2SkinsRestorer&e] &4An error occurred. This problem has been logged. Sorry for the inconvenience.
 acf-core.unknown_command = Unknown Command, please type <c2>/skin</c2>
