Reduced cooldown when skin did not change
Introducing SKIN_ERROR_COOLDOWN for when your making a typo to often (like me i^i)

Reset when player try's url and has no perm.

Like always it can be reduced to 0 for those who like to rage.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,6 +23,7 @@ SkinExpiresAfter: 20
 # Players cooldown when changing skins (set to 0 to disable)
 # Can be bypassed with 'skinsrestorer.bypasscooldown'
 SkinChangeCooldown: 30
+SkinErrorCooldown: 5
 
 # Set the language you will use - Files are located in /SkinsRestorer/languages directory
 # You can add custom locale file by copying the english.yml, renaming the new file into your language and editing it
