Added ShowOnlyCustomGUI to config for upcoming commit.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -51,8 +51,10 @@ DisabledSkins:
     - Owner
 
 # Custom list for the /skins GUI.
+# ShowOnlyCustomGUI will only show CustomGUI.Names in the gui
 CustomGUI:
   Enabled: false
+  ShowOnlyCustomGUI: true
   Names:
     - xknat
     - McLive
