--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 ##############################
 #  SkinsRestorer Config.yml  #
-#  Generated on 13.7.10      #
+#  Generated on 13.8.0       #
 ##############################
 #
 # We from SRTeam thank you for using our plugin!
@@ -11,29 +11,31 @@
 # Not working or get error??  -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Troubleshoot
 # For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
 
+# (?) Step by step config guide -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Configuration
+
 # (!) IF YOU USE BUNGEE, Check & set on every Spigot server spigot.yml -> bungeecord: true
 # (!) & Install Skinsrestorer.jar on ALL SERVERS!!! (BOTH Spigot & Bungeecord)
 
   ##########
   # Basics #
   ##########
+
 # If true, players can change skins without permission.
+# see https://github.com/SkinsRestorer/SkinsRestorerX/wiki/cmds-&-perms for perms.
 SkinWithoutPerm: true
 
 # Players cooldown when changing skins (set to 0 to disable)
+# SkinErrorCooldown when a error or invalid url occurs.
 # Can be bypassed with 'skinsrestorer.bypasscooldown'
 SkinChangeCooldown: 30
 SkinErrorCooldown: 5
 
-# Allows the usage of per skin perm.
-# Example: skinsrestorer.skin.notch OR skinsrestorer.skin.xknat
-# !~ requires  'NewPermissions: true' 
-PerSkinPermissions: false
-
   #################
   # Customization #
   #################
+
 # Enable or disable default skins
+# ApplyForPremium: false will only put skin on skinless/steve players.
 # If there is more than one, the plugin will choose a random one.
 DefaultSkins:
   Enabled: false
@@ -62,6 +64,13 @@ CustomGUI:
   ############
   # Advanced #
   ############
+
+# Allows the usage of per skin perm.
+# Example: skinsrestorer.skin.xknat OR skinsrestorer.skin.McLive
+# with "skinsrestorer.ownskin" you can set your own playername skin.
+# [!] requires  'NewPermissions: true' [!]
+PerSkinPermissions: false
+
 # Time skins are stored in database before we request again (in minutes)
 SkinExpiresAfter: 20
 
@@ -73,7 +82,7 @@ MultiBungee:
   Enabled: false
 
 # Settings for MySQL skin storage (recommended for big BungeeCord networks)
-# !~ IF YOU USE BUNGEE, DO NOT ENABLE MYSQL in Spigot Config.yml ~!
+# [!] IF YOU USE BUNGEE, DO NOT ENABLE MYSQL in Spigot Config.yml [!]
 MySQL:
   Enabled: false
   Host: localhost
@@ -99,7 +108,9 @@ NoSkinIfLoginCanceled: true
   #################
   # Compatibility #
   #################
+
 # True will again make use of the 'HELP_PLAYER' & `SR_LINE` in messages.yml
+# This is more customizable, but at the cost of permission specific help.
 UseOldSkinHelp: false
 
 #Ignore messages.yml 'PREFIX ='
@@ -108,6 +119,7 @@ DisablePrefix: false
   ################
   # DEV's corner #
   ################
+
 # Enable to start receiving debug messages about api request & more.
 Debug: false
 
