spelling improvement in acf

--- a/src/main/resources/command-messages.properties
+++ b/src/main/resources/command-messages.properties
@@ -7,9 +7,11 @@
 #
 # For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
 # For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
+#
+# [Warning!] all non Windows-1252 should be in unicode! (China, Perzisch, russian)  use https://skinsrestorer.net/unicode for command-messages.properties & messages.yml
 acf-core.permission_denied = &3[&2&lSkinsRestorer&r&3] &cI'm sorry, but you do not have permission to perform this command.
 acf-core.error_generic_logged = &e[&2SkinsRestorer&e] &4An error occurred. This problem has been logged. Sorry for the inconvenience.
-acf-core.unknown_command = Unknown Command, please type <c2>/help</c2>
+acf-core.unknown_command = Unknown Command, please type <c2>/skin</c2>
 acf-core.invalid_syntax = Usage: <c2>{command}</c2> <c3>{syntax}</c3>
 acf-core.error_prefix = Error: {message}
 acf-core.error_performing_command = I'm sorry, but there was an error performing this command.
@@ -17,7 +19,7 @@ acf-core.info_message = {message}
 acf-core.please_specify_one_of = &e[&2SkinsRestorer&e] &4Error&8: &cPlease specify one of (<c2>{valid}</c2>).
 acf-core.not_allowed_on_console = [SkinsRestorer] Error: Console may not execute this command.
 acf-core.could_not_find_player = &e[&2SkinsRestorer&e] &4Error&8: &cCould not find a player by the name&4: <c2>{search}</c2>
-acf-core.no_command_matched_search = &e[&2SkinsRestorer&e] &4Error&8: &cnot such command&4: <c2>{search}</c2>.
+acf-core.no_command_matched_search = &e[&2SkinsRestorer&e] &4Error&8: &cno such command&4: <c2>{search}</c2>.
 acf-core.help_page_information = - Showing page <c2>{page}</c2> of <c2>{totalpages}</c2> (<c3>{results}</c3> results).
 acf-core.help_no_results = &e[&2SkinsRestorer&e] &4Error&8: &cNo more results&4.
 acf-core.help_header = &3[&2&lSkinsRestorer&r&3] &7- &bShowing help for &a{commandprefix}{command}&7.
