Change packages for relocation. Now, all the dependencies we need to shade should go to "skinsrestorer.shared.libs". There might be exceptions though, like bStats for Sponge, as its documentation says it should not be relocated.

--- a/pom.xml
+++ b/pom.xml
@@ -216,23 +216,39 @@
                     <relocations>
                         <relocation>
                             <pattern>org.bstats.bukkit</pattern>
-                            <shadedPattern>skinsrestorer.shared.utils.metrics.bukkit</shadedPattern>
+                            <shadedPattern>skinsrestorer.shared.libs.metrics.bukkit</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.bstats.bungeecord</pattern>
-                            <shadedPattern>skinsrestorer.shared.utils.metrics.bungeecord</shadedPattern>
+                            <shadedPattern>skinsrestorer.shared.libs.metrics.bungeecord</shadedPattern>
                         </relocation>
                         <relocation>
-                            <pattern>org.inventivetalent</pattern>
-                            <shadedPattern>skinsrestorer.shared.utils.updater</shadedPattern>
+                            <pattern>org.inventivetalent.update.spiget</pattern>
+                            <shadedPattern>skinsrestorer.shared.libs.spiget-updater</shadedPattern>
                         </relocation>
                         <relocation>
-                            <pattern>co.aikar.commands</pattern>
-                            <shadedPattern>skinsrestorer.shared.utils.acf</shadedPattern>
+                            <pattern>co.aikar</pattern>
+                            <shadedPattern>skinsrestorer.shared.libs.aikar</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>net.md_5.bungee.config</pattern>
-                            <shadedPattern>skinsrestorer.shared.utils.bungee-config</shadedPattern>
+                            <shadedPattern>skinsrestorer.shared.libs.bungee-config</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.yaml.snakeyaml</pattern>
+                            <shadedPattern>skinsrestorer.shared.libs.snakeyaml</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.google</pattern>
+                            <shadedPattern>skinsrestorer.shared.libs.google</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>google.protobuf</pattern>
+                            <shadedPattern>skinsrestorer.shared.libs.protobuf</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.mysql</pattern>
+                            <shadedPattern>skinsrestorer.shared.libs.mysql</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
