--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -83,6 +83,7 @@ MultiBungee:
 
 # Settings for MySQL skin storage (recommended for big BungeeCord networks)
 # [!] IF YOU USE BUNGEE, DO NOT ENABLE MYSQL in Spigot Config.yml [!]
+# [!] non root users: MySQL 8's new default authentication is not supported, use mysql_native_password [!]
 MySQL:
   Enabled: false
   Host: localhost
