--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -44,16 +44,16 @@ DefaultSkins:
   Enabled: false
   ApplyForPremium: false
   Names:
-    - xknat
-    - McLive
+    - "xknat"
+    - "McLive"
 
 # Skins in this list will be disabled, so users can't set it.
 # Can by bypassed with 'skinsrestorer.bypassdisabled'
 DisabledSkins:
   Enabled: false
   Names:
-    - Steve
-    - Owner
+    - "Steve"
+    - "Owner"
 
 # Custom list for the /skins GUI.
 # ShowOnlyCustomGUI will only show CustomGUI.Names in the gui
@@ -61,8 +61,8 @@ CustomGUI:
   Enabled: false
   ShowOnlyCustomGUI: true
   Names:
-    - xknat
-    - McLive
+    - "xknat"
+    - "McLive"
 
   ############
   # Advanced #
