--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -120,6 +120,12 @@ UseOldSkinHelp: false
 #Ignore messages.yml 'PREFIX ='
 DisablePrefix: false
 
+# Dismounts a mounted (on a horse, or sitting) player when they a skin is updated, preventing players from becoming desynced.
+DismountPlayerOnSkinUpdate: false
+
+# Dismounts all passengers mounting a player (such as plugins that let you ride another player), preventing those players from becoming desynced.
+DismountPassengersOnSkinUpdate: false
+
   ################
   # DEV's corner #
   ################
