--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -121,7 +121,7 @@ UseOldSkinHelp: false
 DisablePrefix: false
 
 # Dismounts a mounted (on a horse, or sitting) player when they a skin is updated, preventing players from becoming desynced.
-DismountPlayerOnSkinUpdate: false
+DismountPlayerOnSkinUpdate: tue
 
 # Dismounts all passengers mounting a player (such as plugins that let you ride another player), preventing those players from becoming desynced.
 DismountPassengersOnSkinUpdate: false
