Minecraft fix might break with some plugins / minigames. best is to have it on false by default till nexst release
but we should auto remount also

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -123,8 +123,9 @@ DisablePrefix: false
 # Dismounts a mounted (on a horse, or sitting) player when they a skin is updated, preventing players from becoming desynced.
 DismountPlayerOnSkinUpdate: true
 
-# Remounts a player that was dismounted after a skin update. This is only recommended if you do not use plugins that allow you ride other players, or use sit. Otherwise you could get errors or players could be kicked for flying.
-RemountPlayerOnSkinUpdate: false
+# Remounts a player that was dismounted after a skin update (above option must be true).
+# Disable this is only recommended if you do use plugins that allow you ride other players, or use sit. Otherwise you could get errors or players could be kicked for flying.
+RemountPlayerOnSkinUpdate: true
 
 # Dismounts all passengers mounting a player (such as plugins that let you ride another player), preventing those players from becoming desynced.
 DismountPassengersOnSkinUpdate: false
