Change version to 13.8.6-snapshot

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
-##############################
-#  SkinsRestorer Config.yml  #
-#  Generated on 13.8.5       #
-##############################
+#################################
+#  SkinsRestorer Config.yml     #
+#  Generated on 13.8.6-snapshot #
+#################################
 #
 # We from SRTeam thank you for using our plugin!
 # For more information        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/
