--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #################################
 #  SkinsRestorer Config.yml     #
-#  Generated on 13.8.6-snapshot #
+#  Generated on 13.8.6          #
 #################################
 #
 # We from SRTeam thank you for using our plugin!
