--- a/pom.xml
+++ b/pom.xml
@@ -249,25 +249,25 @@
             <version>1.5.21</version>
             <scope>provided</scope>
         </dependency>
-        <!-- bStats Lite for Bukkit -->
+        <!-- bStats for Bukkit -->
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
-            <version>1.7</version>
+            <version>2.1.0</version>
             <scope>compile</scope>
         </dependency>
-        <!-- bStats Lite for BungeeCord -->
+        <!-- bStats for BungeeCord -->
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bungeecord</artifactId>
-            <version>1.7</version>
+            <version>2.1.0</version>
             <scope>compile</scope>
         </dependency>
-        <!-- bStats Lite for Sponge -->
+        <!-- bStats for Sponge -->
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-sponge</artifactId>
-            <version>1.8</version>
+            <version>2.1.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- Spiget Updater for Bukkit -->
